# synthetic-dividend

./: .emoji-policy.md  .flake8  .gitignore  BRAINSTORMING.md  CHECKPOINT.md  CHECKPOINT_SUMMARY.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CODING_ASSISTANCE_CASE_STUDY.md  CODING_ASSISTANCE_MANIFESTO.md  CODING_ASSISTANCE_USE_CASE.md  CODING_PHILOSOPHY.md  COMPARISON_RESULTS.md  CONTRIBUTORS.md  EXAMPLES.md  FIX_VOLATILITY_ALPHA_TESTS.md  INCOME_GENERATION_ROADMAP.md  INITIAL_CAPITAL_THEORY.md  INSTALLATION.md  ISSUE_9_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  NAMING_CONVENTION.md  NOTES.md  NVDA_comparison.csv  QUICK_REFERENCE.md  README.md  REFACTORING.md  RETURN_METRICS_ANALYSIS.md  SESSION_SUMMARY.md  TEST_ANALYSIS.md  TEST_RESULTS.md  THEORY_CONSOLIDATION_PLAN.md  THEORY_CONSOLIDATION_PROGRESS.md  TODO.md  VOLATILITY_ALPHA_DATA.md  (+33 more)
.github/: ISSUE_TEMPLATE.md
cache/: AAPL_dividends.csv  AAPL_dividends.pkl  APP.csv  APP.pkl  BIL.csv  BIL.pkl  BIL_dividends.csv  BIL_dividends.pkl  BTC-USD.csv  BTC-USD.pkl  DIA.csv  DIA.pkl  DIA_dividends.csv  DIA_dividends.pkl  ETH-USD.csv  ETH-USD.pkl  GLD.csv  GLD.pkl  GLDM.csv  GLDM.pkl  GOOG.csv  GOOG.pkl  GOOG_dividends.csv  GOOG_dividends.pkl  IWM.csv  IWM.pkl  IWM_dividends.csv  IWM_dividends.pkl  MOCK-FLAT-100.0.csv  MOCK-FLAT-100.0.pkl  MOCK-FLAT-100.csv  MOCK-FLAT-100.pkl  MOCK-FLAT-125.0.csv  MOCK-FLAT-125.0.pkl  MOCK-FLAT-150.csv  MOCK-FLAT-150.pkl  MOCK-LINEAR-100-200.csv  MOCK-LINEAR-100-200.pkl  MOCK-LINEAR-50.0-150.0.csv  MOCK-LINEAR-50.0-150.0.pkl  (+57 more)
data/: best_sdn.json
docs/: ABSTRACTION_AUDIT.md  ASSET_ALLOCATION_ARTICLE.md  BRACKET_SEED_FEATURE.md  CHART_ABSTRACTION_DESIGN.md  CODING_PHILOSOPHY.md  CONTRIBUTORS.md  EXAMPLES.md  GUI_NO_CONSOLE.md  HISTORICAL_DATA_TESTING.md  HOLDING_PORTFOLIO_MODELS.md  HOUSEKEEPING.md  HOW_TO_order_gui.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  ORDER_CALCULATOR_GUI.md  PHASE2_CONSOLIDATION_SUMMARY.md  PORTFOLIO_ALGORITHM_DESIGN.md  PORTFOLIO_BACKTEST_FUNCTIONS.md  QUICK_REFERENCE.md  README.md  README_continuous_model.md  RETAIL_MODE_COMPLETE.md  TICKER_CACHING_STRATEGY.md  TOOL_STANDARDIZATION_PLAN.md  TOOL_USE_CASES.md  VALIDATION_RESULTS.md  VISUALIZATIONS.md  _config.yml  analytical_solution.md  ath_only_optimization.md  backtest-consolidation-plan.md  continuous_model.md  continuous_model_derivation.md  continuous_model_summary.md  gap_capture_analysis.md  index.html  no_margin_cash_barbell.md  path_ambiguity_and_data_requirements.md  quantization_and_convergence.md
examples/: README.md  demo_bracket_seed.py  demo_dividends.py
experiments/: .gitkeep  001_nvda_bull_market_withdrawals.md  EXPERIMENTS_SUMMARY.md  EXPERIMENT_004_OPTIMAL_WITHDRAWAL_RATE.md  README.md
financial-modeling-app/: .flake8  .gitignore  CODING_PHILOSOPHY.md  COMPARISON_RESULTS.md  INVESTING_THEORY.md  ISSUES.md  Makefile  NAMING_CONVENTION.md  NAMING_MIGRATION.md  README.md  REFACTORING.md  RESEARCH.md  TEST_RESULTS.md  TODO.md  VOLATILITY_ALPHA_THESIS.md  compare-algorithms.bat  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  research-phase1.bat  research_phase1_1year_core.csv  run-model.bat  run-tests.bat  test-ath-only.bat  test-buy-and-hold.bat  test-nvda.bat  test-sd-ath-only.bat  test-sd.bat  test-synthetic-dividend.bat  test_voo_bil.csv
output/: system-prompt-core.md  system-prompt-full.md
research/: README.md  optimal-rebalancing.bat  profit-sharing-composition.bat
scripts/: README.md  aggressive_fix_batch.py  auto_fix_flake_issues.py  auto_fix_lexical.py  calc-orders.bat  compare-portfolio.bat  compare-table.bat  debug_stack.py  demo_volatility_alpha_curves.py  dev.ps1  final_aggressive_fix.py  fix_overindents_and_vars.py  generate-core-prompt.bat  inspect_vol_alpha.py  merge_continuations_and_fix_blanks.py  merge_more_continuations.py  populate_cache.py  remove_emojis.py  run-model.bat  substitute_continuation_regex.py  test-sd-ath-only.bat  test-visualization.bat  test_bil_interest.py  test_cash_no_margin.py  test_cash_unit.py  test_quantization_convergence.py  test_sd8_prices.py  test_synthetic_patterns.py  volatility_alpha_curves_retail.py
src/: cli.py  main.py  paths.py  run_model.py  synthetic_dividend_tool.py
testdata/: NVDA.csv  README.md  SPY.csv
tests/: conftest.py  manual_test_named_portfolios.py  test_asset.py  test_backtest_parity.py  test_bracket_seed.py  test_buyback_stack.py  test_buyhold_withdrawal_rates.py  (+30 more)
(+196 files in other folders)
